# OP2Lua

./: CMakeLists.txt  README.md
docs/: ARCHITECTURE.md
op2lua-editor/: OP2LuaEditor.sln  README.md
op2lua-editor/OP2LuaEditor/: App.config  GlobalVariables.vb  MissionTypes.vb  OP2LuaEditor.vbproj  fAbout.vb  fMain.Designer.vb  fMain.Regions.vb  fMain.vb  fMissionProps.Designer.vb  fMissionProps.vb  fSettings.Designer.vb  fSettings.vb
op2lua-editor/OP2LuaEditor/My Project/: Application.Designer.vb  AssemblyInfo.vb  Resources.Designer.vb  Resources.resx  Settings.Designer.vb
stub/: LuaMission.cpp  LuaMission.rc
